# tobes-ui

./: .gitignore  .mise.toml  Cargo.toml  README.md
src/: app.rs  main.rs  spectrometer.rs
