[package]
name = "tobes-rs"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "tobes-rs"
path = "src/main.rs"

[dependencies]
anyhow      = "1"
clap        = { version = "4", features = ["derive"] }
eframe      = "0.29"
egui        = "0.29"
egui_plot   = "0.29"
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
serialport  = "4"

[profile.release]
opt-level = 3
